Added new title

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <body>
 
+<b><font-size="+3">Placeholder for Kris's Website! :D</font></b>
+
 <h>Can you see this?</h>
 <a href="/pictures/hb2244-big.gif">CLICK ME!</a>
 
